--- a/app2/ip_styles.css
+++ b/app2/ip_styles.css
@@ -144,7 +144,8 @@ h1{
   margin-top: 15px;
   margin-left: 18px;
   padding: 5px;
-  border:1px solid black;
+  border:1px solid rgb(255, 255, 255);
+  color: white;
   width: 200px;
   height: 40px;
   align-items: center;
